--- a/Pagcompra/src/app/componentes/login/login.component.html
+++ b/Pagcompra/src/app/componentes/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<body >
+
+    <div>
+        <br/>
+        <form class="form-group row">
+            
+            <div class="form-group col-md-3">
+    
+                <input type="email" name="email" placeholder="Email" class="form-control">
+    
+            </div>
+    
+            <div>
+    
+                <input type="password" name="password" placeholder="Password" class="form-control">
+    
+            </div>
+            <br/>
+            <br/>
+    
+            <div class="form-group col-md-3">
+                
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+    
+    
+        </form>
+    
+    
+    </div>
+    
+</body>
