--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -1,45 +1,54 @@
 <body>
-    <div>
+    <div style="background-color: black;"> 
+        <div style="padding-left: 90%;">
+            <i class="material-icons" style="color: white;">shopping_cart</i>
+            <p style="color: white;">Your cart</p>
+        </div>
+       <br>
+    </div>
+    <br>
+    <div style="background-color: white;">
         
     </div>
-    <div style="background-color: black;">
-        <div>
-            <p >ABOUT</p><br>
-            <br>
-            <p>
+    <div style="background-color: black; ">
+        <div style="padding-left: 10%;">
+            <p style="color: white;">ABOUT</p>
+            <p style="color: white;">
                 Lorem ipsum dolor sit amet,<br>
                 consectetur adipisicing elit, sed do<br>
                 eiusmod tempor incididunt ut<br>
             </p>
-            <br>
-            <p> 
-                1734 Stonecoal Road<br><br>
+            
+            <p style="color: white;"> 
+                1734 Stonecoal Road<br>
                 +021-95-51-84
             </p>
             
+            <div style="padding-left: 35%;">
+                <P style="color: white;">CATEGORIES</P>
+                <p style="color: white;">Hot deals<br><br>
+                    Laptops<br><br>
+                    Smarphones<br><br>
+                    Cameras
+                </p>
+            </div>
+
         </div>
 
-        <div>
-            <P>CATEGORIES</P>
-            <p>Hot deals<br><br>
-                Laptops<br><br>
-                Smarphones<br><br>
-                Cameras
-            </p>
-        </div>
+        
 
-        <div>
-            <P>INFORMATION</P>
-            <p>
+        <div style="padding-left: 55%;">
+            <P style="color: white;">INFORMATION</P>
+            <p style="color: white;">
                 About Us<br><br>
                 Contact Us<br><br>
                 Privacy Policy<br><br>
                 Orders and Returns
             </p>
 
-            <div>
-                <P>SERVICE</P>
-                <p>
+            <div style="padding-left: 85%;">
+                <P style="color: white;">SERVICE</P>
+                <p style="color: white;">
                     My Account<br><br>
                     View Cart<br><br>
                     Wishlist<br><br>
