--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -1,16 +1,34 @@
 <body>
+    <div style="background-color: gray;"> 
+        <div >
+            <br>
+            <i class="material-icons" style="color: white;">phone</i>
+        </div>
+       
+       <br>
+    </div>
+
     <div style="background-color: black;"> 
         <div style="padding-left: 90%;">
-            <i class="material-icons" style="color: white;">shopping_cart</i>
-            <p style="color: white;">Your cart</p>
+            <br>
+            <button ><i class="material-icons" style="color: black;">shopping_cart</i></button>
+            
         </div>
+        <p style="color: white; padding-left: 89.5%;">Your cart</p>
        <br>
     </div>
     <br>
+
+
+
     <div style="background-color: white;">
         
     </div>
-    <div style="background-color: black; ">
+
+
+
+    <div style="background-color: black; justify-content: space-between ;flex-direction: row; display: flex; ">
+       
         <div style="padding-left: 10%;">
             <p style="color: white;">ABOUT</p>
             <p style="color: white;">
@@ -18,26 +36,30 @@
                 consectetur adipisicing elit, sed do<br>
                 eiusmod tempor incididunt ut<br>
             </p>
-            
-            <p style="color: white;"> 
-                1734 Stonecoal Road<br>
-                +021-95-51-84
-            </p>
-            
-            <div style="padding-left: 35%;">
-                <P style="color: white;">CATEGORIES</P>
-                <p style="color: white;">Hot deals<br><br>
-                    Laptops<br><br>
-                    Smarphones<br><br>
-                    Cameras
-                </p>
-            </div>
-
+            <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                <i class="material-icons" style="color: white;">location_on</i>
+                <p style="color: white; padding-right: 25%; ">1734 Stonecoal Road</p>
+        
+             </div> 
+             <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                <i class="material-icons" style="color: white;">phone</i>
+                <p style="color: white; padding-right: 40%; ">+021-95-51-84</p>
+        
+             </div> 
         </div>
 
         
+        
+        <div >
+            <P style="color: white;">CATEGORIES</P>
+            <p style="color: white;">Hot deals<br><br>
+                Laptops<br><br>
+                Smarphones<br><br>
+                Cameras
+            </p>
+        </div>
 
-        <div style="padding-left: 55%;">
+        <div >
             <P style="color: white;">INFORMATION</P>
             <p style="color: white;">
                 About Us<br><br>
@@ -46,16 +68,19 @@
                 Orders and Returns
             </p>
 
-            <div style="padding-left: 85%;">
-                <P style="color: white;">SERVICE</P>
-                <p style="color: white;">
-                    My Account<br><br>
-                    View Cart<br><br>
-                    Wishlist<br><br>
-                    Track My Order
-                </p>
-            </div>
+    
         </div>
+
+        <div style="padding-right: 10%;" >
+            <P style="color: white;">SERVICE</P>
+            <p style="color: white;">
+                My Account<br><br>
+                View Cart<br><br>
+                Wishlist<br><br>
+                Track My Order
+            </p>
+        </div>
+
     </div>
 </body>
 
