--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -1,5 +1,7 @@
-<body>
+<body style="height: 100%; width: auto;">
     <div style="background-color: gray;"> 
+
+
         <div >
             <br>
             <i class="material-icons" style="color: white;">phone</i>
@@ -8,21 +10,85 @@
        <br>
     </div>
 
-    <div style="background-color: black;"> 
-        <div style="padding-left: 90%;">
+
+
+    <div style="background-color: black; justify-content: space-between ;flex-direction: row; display: flex; "> 
+        
+        <div style="padding-left: 4%;">
+            <br>
+            <h1 style="color: white; padding-left: 4%; ">CenterElectronics</h1>
+        </div>
+        
+        <div style="padding-left: 70%;">
             <br>
             <button ><i class="material-icons" style="color: black;">shopping_cart</i></button>
-            
+            <p style="color: white; ">Your cart</p>   
         </div>
-        <p style="color: white; padding-left: 89.5%;">Your cart</p>
+        
        <br>
     </div>
     <br>
 
-
+    //contenido principal
 
     <div style="background-color: white;">
+        <div style="background-color: black; justify-content: space-between ;flex-direction: row; display: flex; ">
         
+            <div style="padding-left: 10%;">
+                <p style="color: white;">ABOUT</p>
+                <p style="color: white;">
+                    Lorem ipsum dolor sit amet,<br>
+                    consectetur adipisicing elit, sed do<br>
+                    eiusmod tempor incididunt ut<br>
+                </p>
+                
+                <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                    <i class="material-icons" style="color: white;">location_on</i>
+                    <p style="color: white; padding-right: 25%; ">1734 Stonecoal Road</p>
+            
+                 </div> 
+                 <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                    <i class="material-icons" style="color: white;">phone</i>
+                    <p style="color: white; padding-right: 40%; ">+021-95-51-84</p>
+            
+                 </div> 
+            </div>
+    
+            
+            
+            <div >
+                <P style="color: white;">CATEGORIES</P>
+                <p style="color: white;">Hot deals<br><br>
+                    Laptops<br><br>
+                    Smarphones<br><br>
+                    Cameras
+                </p>
+            </div>
+    
+            <div >
+                <P style="color: white;">INFORMATION</P>
+                <p style="color: white;">
+                    About Us<br><br>
+                    Contact Us<br><br>
+                    Privacy Policy<br><br>
+                    Orders and Returns
+                </p>
+    
+        
+            </div>
+    
+            <div style="padding-right: 10%;" >
+                <P style="color: white;">SERVICE</P>
+                <p style="color: white;">
+                    My Account<br><br>
+                    View Cart<br><br>
+                    Wishlist<br><br>
+                    Track My Order
+                </p>
+            </div>
+
+        </div>
+        <br>
     </div>
 
 
@@ -36,6 +102,7 @@
                 consectetur adipisicing elit, sed do<br>
                 eiusmod tempor incididunt ut<br>
             </p>
+            
             <div style="justify-content: space-between ;flex-direction: row; display: flex;">
                 <i class="material-icons" style="color: white;">location_on</i>
                 <p style="color: white; padding-right: 25%; ">1734 Stonecoal Road</p>
