--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -41,10 +41,55 @@
   
 
     <div style="background-color: white; flex-direction: column; display: flex;">
+        <br>
+        <h2 style="padding-left: 10%;">NUEVOS PRODUCTOS</h2>
 
+        <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
 
-        <div style="justify-content: space-between ;flex-direction: row; display: flex;">
-            <div style="padding-left: 10%;"></div>
+            <div style="border: black 2px solid; height: 400Px; width: 250PX; "  >
+                
+                <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                <br>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <br>
+                <p style="text-align: center; color: red;">$75.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+                <br>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                <br>
+                <p style="text-align: center;"><img src="https://m.media-amazon.com/images/I/618Qw03SJSS._AC_SX679_.jpg" alt="laptop dell 15" width="240px" height="180px"></p>
+                <br>
+                <p style="text-align: center;">Dell Inspiron 15<br>Laptop</p>
+                <br>
+                <p style="text-align: center; color: red;">$980.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                
+                <img src="" alt="marvo H8321S" width="240px" height="240px">
+                <br>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <br>
+                <p style="text-align: center; color: red;">$980.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                
+                <img src="" alt="marvo H8321S" width="240px" height="240px">
+                <br>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <br>
+                <p style="text-align: center; color: red;">$980.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
         </div>
 
         
