--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -42,7 +42,7 @@
 
     <div style="background-color: white; flex-direction: column; display: flex;">
         <br>
-        <h2 style="padding-left: 10%;">NUEVOS PRODUCTOS</h2>
+        <h2 style="padding-left: 4.5%;">NUEVOS PRODUCTOS</h2>
 
         <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
 
@@ -62,6 +62,7 @@
                 <br>
                 <p style="text-align: center;"><img src="https://m.media-amazon.com/images/I/618Qw03SJSS._AC_SX679_.jpg" alt="laptop dell 15" width="240px" height="180px"></p>
                 <br>
+                
                 <p style="text-align: center;">Dell Inspiron 15<br>Laptop</p>
                 <br>
                 <p style="text-align: center; color: red;">$980.00</p>
@@ -71,9 +72,10 @@
 
             <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
                 
-                <img src="" alt="marvo H8321S" width="240px" height="240px">
+                <img src="https://mobilestore.ec/wp-content/uploads/2019/11/AirPods-Pro-Mobile-Store-Ecuador5.jpg" alt="airposdspro-apple" width="240px" height="240px">
                 <br>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <p style="text-align: center;">Apple Airpods pro</p>
+                <br>
                 <br>
                 <p style="text-align: center; color: red;">$980.00</p>
                 <br>
@@ -81,39 +83,44 @@
             </div>
 
             <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
-                
-                <img src="" alt="marvo H8321S" width="240px" height="240px">
                 <br>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <img src="https://tiaecuador.vtexassets.com/arquivos/ids/202094/V0F3D220103152JC8F8.jpg?v=1754500228" alt="Lenovo gaming" width="240px" height="180px">
                 <br>
-                <p style="text-align: center; color: red;">$980.00</p>
+                <br>
+                <br>
+                <p style="text-align: center;">LAPTOP LENOVO<BR> IDEAPAD GAMING 3 15.6</p>
+                <br>
+                <p style="text-align: center; color: red;">$1299.00</p>
                 <br>
                 <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
             </div>
         </div>
-
-        
+        <br><br>
+        <h2 style="padding-left: 4.5%;">MAS POPULARES</h2>
         
         <div >
             
 
         </div>
 
+
         <div >
             
         </div>
+
 
         <div style="padding-right: 10%;" >
             
         </div>
+
         <br>
     </div>
 
+    <br>
 
-
-
-
-    <div style="background-color: black; justify-content: space-between ;flex-direction: row; display: flex; ">
+    <div style="background-color: black; justify-content: space-between ;flex-direction: column; display: flex; ">
+        <br>
+        <div style="background-color: black; justify-content: space-between ;flex-direction: row; display: flex; ">
        
         <div style="padding-left: 10%;">
             <p style="color: white;">ABOUT</p>
@@ -167,7 +174,8 @@
                 Track My Order
             </p>
         </div>
-
+    </div>
+    <br>
     </div>
 </body>
 
