--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -60,7 +60,7 @@
 
             <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
                 <br>
-                <p style="text-align: center;"><img src="https://m.media-amazon.com/images/I/618Qw03SJSS._AC_SX679_.jpg" alt="laptop dell 15" width="240px" height="180px"></p>
+                <p style="text-align: center;"><img src="https://m.media-amazon.com/images/I/618Qw03SJSS._AC_SX679_.jpg" alt="laptop dell 15" width="240px" height="190px"></p>
                 <br>
                 
                 <p style="text-align: center;">Dell Inspiron 15<br>Laptop</p>
@@ -95,18 +95,73 @@
                 <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
             </div>
         </div>
+
+        <br><br>
+
+        <div style="background-color: lightslategrey; height: 20%;">
+            <br>
+            <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
+                <p><img src="https://portal-center.com/wp-content/uploads/2016/03/LEGION-Y540.png" alt="Laptop Lenovo Legion Y540 Gaming" width="300px" height="300px"></p>
+            </div>
+        </div>
+
         <br><br>
         <h2 style="padding-left: 4.5%;">MAS POPULARES</h2>
-        
-        <div >
-            
+        <br>
+
+
+        <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
+            <div style="border: black 2px solid; height: 400Px; width: 250PX; "  >
+                
+                <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                <br>
+                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <br>
+                <p style="text-align: center; color: red;">$75.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+                <br>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                <br>
+                <p style="text-align: center;"><img src="https://portal-center.com/wp-content/uploads/2016/03/LEGION-Y540.png" alt="Laptop Lenovo Legion Y540 Gaming" width="190px" height="190px"></p>
+                <br>
+                
+                <p style="text-align: center;">Laptop Lenovo Legion<br>Y540 Gaming</p>
+                <br>
+                <p style="text-align: center; color: red;">$1790.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                
+                <img src="https://mobilestore.ec/wp-content/uploads/2019/11/AirPods-Pro-Mobile-Store-Ecuador5.jpg" alt="airposdspro-apple" width="240px" height="240px">
+                <br>
+                <p style="text-align: center;">Apple Airpods pro</p>
+                <br>
+                <br>
+                <p style="text-align: center; color: red;">$980.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
+
+            <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
+                <br>
+                <img src="https://tiaecuador.vtexassets.com/arquivos/ids/202094/V0F3D220103152JC8F8.jpg?v=1754500228" alt="Lenovo gaming" width="240px" height="180px">
+                <br>
+                <br>
+                <br>
+                <p style="text-align: center;">LAPTOP LENOVO<BR> IDEAPAD GAMING 3 15.6</p>
+                <br>
+                <p style="text-align: center; color: red;">$1299.00</p>
+                <br>
+                <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
+            </div>
 
         </div>
 
-
-        <div >
-            
-        </div>
 
 
         <div style="padding-right: 10%;" >
@@ -116,7 +171,13 @@
         <br>
     </div>
 
+
+
+
     <br>
+
+
+
 
     <div style="background-color: black; justify-content: space-between ;flex-direction: column; display: flex; ">
         <br>
