--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -101,9 +101,40 @@
         <div style="background-color: lightslategrey; height: 20%;">
             <br>
             <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
-                <p><img src="https://portal-center.com/wp-content/uploads/2016/03/LEGION-Y540.png" alt="Laptop Lenovo Legion Y540 Gaming" width="300px" height="300px"></p>
+                <p><img src="https://portal-center.com/wp-content/uploads/2016/03/LEGION-Y540.png" alt="Laptop Lenovo Legion Y540 Gaming" width="400px" height="400px"></p>
+                
+                <div style="justify-content: space-evenly ;flex-direction: column; display: flex;">
+                    <div style="justify-content: space-evenly ;flex-direction: row; display: flex;">
+
+                        <div style="background-color: red; color: white; border-radius: 5cm; border-color: red; width: 80px; height: 80px; ">
+                            <h2 style="text-align: center;">02<br>days</h2>
+                        </div>
+                        &nbsp;
+                        &nbsp;
+                        <div style="background-color: red; color: white; border-radius: 5cm; border-color: red; width: 80px; height: 80px; ">
+                            <h2 style="text-align: center;">10<br>hours</h2>
+                        </div>
+                        &nbsp;
+                        &nbsp;
+                        <div style="background-color: red; color: white; border-radius: 5cm; border-color: red; width: 80px; height: 80px; ">
+                            <h2 style="text-align: center;">34<br>minutes</h2>
+                        </div>
+                        &nbsp;
+                        &nbsp;
+                        <div style="background-color: red; color: white; border-radius: 5cm; border-color: red; width: 80px; height: 80px; ">
+                            <h2 style="text-align: center;">50<br>seconds</h2>
+                        </div>
+
+                    </div>
+                    <h3 style="text-align: center;"><b>HOT DEAL THIS WEEK</b><br>NEW COLLECTION UP TO 50% OFF</h3>
+                    <button style="border-radius: 5cm; background-color: red; color: white; border-color: red;">SHOP ON</button>
+                </div>
+
+                <p><img src="https://goodprice.com.ec/web/image/product.product/479/image?unique=461c3c1" alt="CELULAR SAMSUNG GALAXY A02S" width="400px" height="400px"></p>
+
             </div>
         </div>
+
 
         <br><br>
         <h2 style="padding-left: 4.5%;">MAS POPULARES</h2>
@@ -113,11 +144,11 @@
         <div style="justify-content: space-evenly ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
             <div style="border: black 2px solid; height: 400Px; width: 250PX; "  >
                 
-                <img src="https://www.todohogar.com/215591-medium_default/audifonos-gamer-luz-led-35mm-con-microfono-h8321s-marvo.jpg" alt="marvo H8321S" width="240px" height="240px">
+                <img src="https://goodprice.com.ec/web/image/product.product/479/image?unique=461c3c1" alt="marvo H8321S" width="240px" height="240px">
                 <br>
-                <p style="text-align: center;">Audifonos gamer<br>H8321S Marvo</p>
+                <p style="text-align: center;">CELULAR SAMSUNG<br>GALAXY A02S</p>
                 <br>
-                <p style="text-align: center; color: red;">$75.00</p>
+                <p style="text-align: center; color: red;">$179.00</p>
                 <br>
                 <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
                 <br>
