--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -168,23 +168,22 @@
 
             <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
                 
-                <img src="https://mobilestore.ec/wp-content/uploads/2019/11/AirPods-Pro-Mobile-Store-Ecuador5.jpg" alt="airposdspro-apple" width="240px" height="240px">
+                <img src="https://crecos.vtexassets.com/arquivos/ids/201283/IPH12P-128-NE-W.jpg?v=637439130421130000" alt="Apple iPhone" width="240px" height="240px">
                 <br>
-                <p style="text-align: center;">Apple Airpods pro</p>
+                <p style="text-align: center;">Celular Apple iPhone<br>12 Pro P89655 </p>
                 <br>
-                <br>
-                <p style="text-align: center; color: red;">$980.00</p>
+                <p style="text-align: center; color: red;">$1818.60</p>
                 <br>
                 <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
             </div>
 
             <div style="border: black 2px solid; margin-left: 10%; height: 400Px; width: 250PX; "  >
                 <br>
-                <img src="https://tiaecuador.vtexassets.com/arquivos/ids/202094/V0F3D220103152JC8F8.jpg?v=1754500228" alt="Lenovo gaming" width="240px" height="180px">
+                <img src="https://marcimex.vtexassets.com/arquivos/ids/188536-800-auto?v=637902388820800000&width=800&height=auto&aspect=true" alt="SMART WATCH" width="250px" height="180px">
                 <br>
                 <br>
                 <br>
-                <p style="text-align: center;">LAPTOP LENOVO<BR> IDEAPAD GAMING 3 15.6</p>
+                <p style="text-align: center;">CUBITT-SMART WATCH<br>CTJR-1BK|NEGRO</p>
                 <br>
                 <p style="text-align: center; color: red;">$1299.00</p>
                 <br>
