--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -1,14 +1,33 @@
 <body style="height: 100%; width: auto;">
 
 
-    <div style="background-color: gray;"> 
-
-
-        <div >
-            
+    <div style="background-color: gray; justify-content: space-between ;flex-direction: row; display: flex; ">
+        
+        <div style="padding-left: 2%; justify-content: space-between ;flex-direction: row; display: flex;">
             <i class="material-icons" style="color: white;">phone</i>
+            <p>+021-95-51-84</p>
+        </div>
+
+        <div style="padding-left: 2%; justify-content: space-between ;flex-direction: row; display: flex;">
+            <i class="material-icons" style="color: white;">email</i>
+            <p>email@gmail.com</p>
+        </div>
+
+        <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+            <i class="material-icons" style="color: white;">location_on</i>
+            <p>direccion</p>
+        </div>
+
+        <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+            <i class="material-icons" style="color: white;">money</i> 
+            <p>precio</p>
         </div>
        
+        <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+            <i class="material-icons" style="color: white;">person</i>
+            <input>
+        </div>
+
        <br>
     </div>
 
@@ -190,12 +209,6 @@
                 <p style="text-align: center;"><button style="color: white; background-color: red;">AGREGAR</button></p>
             </div>
 
-        </div>
-
-
-
-        <div style="padding-right: 10%;" >
-            
         </div>
 
         <br>
