--- a/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
+++ b/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
@@ -1,1 +1,75 @@
-<p>pagcarrito works!</p>
+<body style="width: 100%; height: auto;">
+    
+    <div style="background-color: white;">
+        <br>
+    </div>
+
+    <div style="background-color: gainsboro;">
+        <br>
+    </div>
+
+    <div style="background-color: white;">
+        <br>
+    </div>
+
+    <div style="background-color: gainsboro; justify-content: space-between ;flex-direction: row; display: flex;">
+        
+        <div style="padding-left: 10%;">
+            <p style="color: black;"><b>Contact Us</b></p>
+            
+            <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                <i class="material-icons" style="color: black;">email</i>
+                <p style="color: black; padding-right: 25%; ">ElectronicC@gmail.com</p>
+        
+             </div> 
+             <br>
+             <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                <i class="material-icons" style="color: black;">phone</i>
+                <p style="color: black; padding-right: 40%; ">+592-0967834012</p>
+        
+             </div> 
+             <br>
+             <div style="justify-content: space-between ;flex-direction: row; display: flex;">
+                <i class="material-icons" style="color: black;">location_on</i>
+                <p style="color: black; padding-right: 25%; ">1734 Stonecoal Road</p>
+        
+             </div> 
+        </div>
+
+        
+        
+        <div >
+            <P style="color: black;"><b>INFORMATION</b></P>
+            <p style="color: black;">About<br><br>
+                Our company<br><br>
+                Our history<br><br>
+                Contacts<br><br>
+                Delivery information
+            </p>
+        </div>
+
+        <div >
+            <P style="color: black;"><b>How can we help</b></P>
+            <p style="color: black;">
+                Order traicing<br><br>
+                FAQ<br><br>
+                Privacy Policy<br><br>
+                Support
+            </p>
+
+    
+        </div>
+
+        <div style="padding-right: 10%;" >
+            <P style="color: black;"><b>Account</b></P>
+            <p style="color: black;">
+                My Account<br><br>
+                Checkout<br><br>
+                Cart<br><br>
+                Simple Order
+            </p>
+        </div>
+        
+    </div>
+
+</body>
