--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -5,7 +5,7 @@
         
         <div style="padding-left: 2%; justify-content: space-between ;flex-direction: row; display: flex;">
             <i class="material-icons" style="color: white;">phone</i>
-            <p>+021-95-51-84</p>
+            <p>+592-0967834012</p>
         </div>
 
         <div style="padding-left: 2%; justify-content: space-between ;flex-direction: row; display: flex;">
@@ -241,7 +241,7 @@
              </div> 
              <div style="justify-content: space-between ;flex-direction: row; display: flex;">
                 <i class="material-icons" style="color: white;">phone</i>
-                <p style="color: white; padding-right: 40%; ">+021-95-51-84</p>
+                <p style="color: white; padding-right: 40%; ">+592-0967834012</p>
         
              </div> 
         </div>
