--- a/Pagcompra/src/app/componentes/login/login.component.html
+++ b/Pagcompra/src/app/componentes/login/login.component.html
@@ -1,32 +1,40 @@
 <body >
+    <div style="background-color: blueviolet; text-align: center; " >
 
-    <div>
-        <br/>
-        <form class="form-group row">
+        <div style="margin: 0%;;">
+            <br/>
             
-            <div class="form-group col-md-3">
-    
-                <input type="email" name="email" placeholder="Email" class="form-control">
-    
-            </div>
-    
-            <div>
-    
-                <input type="password" name="password" placeholder="Password" class="form-control">
-    
-            </div>
-            <br/>
-            <br/>
-    
-            <div class="form-group col-md-3">
-                
-                <button type="submit" class="btn btn-primary">Login</button>
-            </div>
-    
-    
-        </form>
-    
-    
+            <form>
+                <br>
+                <br>
+                <h4>Ingrese usuario</h4>
+                <div class="form-group col-md-3">
+        
+                    <input type="email" name="email" placeholder="Email" class="form-control " style="border-radius: 7px;width: 250px; height: 27px; ">
+        
+                </div>
+                <br>
+                <br>
+                <h4>Ingrese contrasena</h4>
+                <div>
+        
+                    <input type="password" name="password" placeholder="Password" class="form-control" style="border-radius: 7px; width: 250px; height: 27px;">
+        
+                </div>
+                <br/>
+                <br/>
+        
+                <div>
+                    
+                    <button type="submit" class="btn success" style="color: white;">Login</button>
+                </div>
+        
+        
+            </form>
+            <br>
+        </div>
+        <br>
     </div>
-    
+
 </body>
+
