--- a/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
+++ b/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
@@ -1,11 +1,30 @@
 <body style="width: 100%; height: auto;">
     
+    
     <div style="background-color: white;">
         <br>
     </div>
 
     <div style="background-color: gainsboro;">
         <br>
+        <div style="background-color: gainsboro; justify-content: space-between ;flex-direction: row; display: flex; padding-left: 5%; padding-right: 5%;">
+            <div >
+                <h1 style="color: black;">CenterElectronics</h1>
+            </div>
+
+            <div >
+                <h3 style="color: black;">HOME</h3>
+            </div>
+
+            <div >
+                <h3 style="color: black;">SHOP</h3>
+            </div>
+
+            <div >
+                <h3 style="color: black;">PAGES</h3>
+            </div>
+        
+        </div>
     </div>
 
     <div style="background-color: white;">
