--- a/Pagcompra/src/app/componentes/login/login.component.html
+++ b/Pagcompra/src/app/componentes/login/login.component.html
@@ -1,40 +1,44 @@
-<body >
-    <div style="background-color: blueviolet; text-align: center; " >
+<!DOCTYPE html>
+<html lang="en">
 
-        <div style="margin: 0%;;">
-            <br/>
-            
-            <form>
-                <br>
-                <br>
-                <h4>Ingrese usuario</h4>
-                <div class="form-group col-md-3">
-        
-                    <input type="email" name="email" placeholder="Email" class="form-control " style="border-radius: 7px;width: 250px; height: 27px; ">
-        
-                </div>
-                <br>
-                <br>
-                <h4>Ingrese contrasena</h4>
-                <div>
-        
-                    <input type="password" name="password" placeholder="Password" class="form-control" style="border-radius: 7px; width: 250px; height: 27px;">
-        
-                </div>
-                <br/>
-                <br/>
-        
-                <div>
-                    
-                    <button type="submit" class="btn success" style="color: white;">Login</button>
-                </div>
-        
-        
-            </form>
-            <br>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <section>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="box">
+      <div class="square" style="--i:0;"></div>
+      <div class="square" style="--i:1;"></div>
+      <div class="square" style="--i:2;"></div>
+      <div class="square" style="--i:3;"></div>
+      <div class="square" style="--i:4;"></div>
+      <div class="container">
+        <div class="from">
+          <h2>Iniciar</h2>
+          <form>
+            <div class="inputBox">
+              <input type="text" placeholder="Usuario">
+            </div>
+            <div class="inputBox">
+              <input type="password" placeholder="Contrasena">
+            </div>
+            <div class="inputBox">
+              <input (click)="nave()" type="submit" value="Iniciar">
+
+            </div>
+            <p class="forget"><a href="#">¿Olvidaste tu contraseña?</a></p>
+            <p class="forget"><a href="#">¿No tienes una cuenta? </a></p>
+          </form>
         </div>
-        <br>
+      </div>
     </div>
-
+  </section>
 </body>
+
+</html>
 
