--- a/Pagcompra/src/app/componentes/login/login.component.html
+++ b/Pagcompra/src/app/componentes/login/login.component.html
@@ -19,7 +19,8 @@
       <div class="square" style="--i:4;"></div>
       <div class="container">
         <div class="from">
-          <h2>Iniciar</h2>
+            <br>
+          <h2>Electronic<br>Center</h2>
           <form>
             <div class="inputBox">
               <input type="text" placeholder="Usuario">
