--- a/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
+++ b/Pagcompra/src/app/componentes/pagcompra/pagcompra.component.html
@@ -24,8 +24,8 @@
         </div>
        
         <div style="justify-content: space-between ;flex-direction: row; display: flex;">
-            <i class="material-icons" style="color: white;">person</i>
-            <input>
+            <i (click)="log()" class="material-icons" style="color: white;">person</i>
+            
         </div>
 
        <br>
