--- a/Pagcompra/src/app/componentes/login/login.component.css
+++ b/Pagcompra/src/app/componentes/login/login.component.css
@@ -21,18 +21,19 @@ section .color {
 section .color:nth-child(1) {
     top: -350;
     width: 600px; height: 600px;
-    background-color: #ff359b;
+    background-color: gray;
 }
 section .color:nth-child(2) {
     bottom: -150px; left: 100px;
     width: 500px; height: 500px;
-    background-color: #0128d6;
+    background-color: #2E4053;
 }
 section .color:nth-child(3) {
     bottom: 50px; right: 100px;
     width: 300px; height: 300px;
-    background-color: #00d2ff;
+    background-color: #D6DBDF;
 }
+
 section .box {
     position: relative;
 }
@@ -45,6 +46,7 @@ section .box .square {
     animation: animate 10s linear infinite;
     animation-delay: calc(-1s * var(--i));
 }
+
 @keyframes animate {
     0%, 100% {transform: translate(-30px);}
     50% {transform: translate(30px);}
@@ -140,3 +142,4 @@ section .container form .forget a {
     cursor: pointer;
     text-decoration: none;
 }
+
