--- a/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
+++ b/Pagcompra/src/app/componentes/pagcarrito/pagcarrito.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <div >
-                <h3 style="color: black;">HOME</h3>
+                <h3 (click)="home()"  style="color: black;">HOME</h3>
             </div>
 
             <div >
